--- a/jumpstart/templates/jumpstart/helper.html
+++ b/jumpstart/templates/jumpstart/helper.html
@@ -9,27 +9,33 @@
 <div class="alert alert-warning">{{ message }}</div>
 {% endif %}
 {% endfor %}
-<p class="card-text">Hi {% if helper.nickname %}{{ helper.nickname }}{% else %}{{ helper.name }}{% endif %}, welcome to Jumpstart!</p>
+<p class="card-text">Hi {% if helper.nickname %}{{ helper.nickname }}{% else %}{{ helper.name }}{% endif %}, welcome to <a href="{% url 'website:jumpstart-redirect' %}">Jumpstart</a>!</p>
 <div class="card">
-    <div class="card-header">
-      Your Group
-    </div>
-    <div class="card-body">
-      <p class="card-text">
-        You are helper of <b>Group {{ helper.group.id }}</b>.
-      </p>
-      <p class="card-text">
-        Members in Group {{ helper.group.id }}:
-        <ul>
-          {% for group_fresher in helper.group.fresher_set.all %}
-          {% if group_fresher != fresher %}
-          <li>{{ group_fresher.name }}</li>
-          {% endif %}
-          {% endfor %}
-        </ul>
-      </p>
-    </div>
+  <div class="card-header">
+    Your Group
   </div>
+  <div class="card-body">
+    {% if helper.group.name %}
+    <h5>{{ helper.group.name }}</h5>
+    <small class="text-muted">Group {{ helper.group.id }}</small>
+    {% else %}
+    <h5>Group {{ helper.group.id }}</h5>
+    {% endif %}
+    <p class="card-text">
+      You are the helper of <b>{% if helper.group.name %}{{ helper.group.name }}{% else %}Group {{ helper.group.id }}{% endif %}</b>.
+    </p>
+    <p class="card-text">
+      Member{{ helper.group.fresher_set.all|length|pluralize }} in {% if helper.group.name %}{{ helper.group.name }}{% else %}Group {{ helper.group.id }}{% endif %}:
+      <ul>
+        {% for group_fresher in helper.group.fresher_set.all %}
+        {% if group_fresher != fresher %}
+        <li>{{ group_fresher.name }}</li>
+        {% endif %}
+        {% endfor %}
+      </ul>
+    </p>
+  </div>
+</div>
 <div class="card mt-3">
   <div class="card-header">
     Your Profile
@@ -55,8 +61,17 @@
       City Challenge
     </div>
     <div class="card-body">
-      
+      <p class="card-text">
+        Please help fill in this section with the group during the event.
+        <ul>
+          <li>
+            Group name: {% if fresher.group.name %}{{ fresher.group.name }}{% else %}<span class="text-muted">Not set</span>{% endif %}
+          </li>
+        </ul>
+        <a href="#">Edit</a>
+      </p>
     </div>
   </div>
 </div>
+{% include 'jumpstart/groups-list.html' %}
 {% endblock %}
