--- a/jumpstart/templates/jumpstart/committee.html
+++ b/jumpstart/templates/jumpstart/committee.html
@@ -7,8 +7,16 @@
       Group {{ group.id }}
     </div>
     <div class="card-body">
-      <img class="img-fluid helper-photo" src="{% if helper.photo %}{{ helper.photo.url }}{% endif %}" alt="{{ group.helper.name }}">
-      <p class="card-text mt-2">Group helper: {{ group.helper.name }}{% if group.helper.nickname %} ({{ group.helper.nickname }}){% endif %} <small class="text-muted ml-3">{{ group.helper.username }}</small></p>
+      {% if group.name %}
+      <h5>{{ group.name }}</h5>
+      <small>Group {{ group.id }}</small>
+      {% else %}
+      <h5>Group {{ group.id }}</h5>
+      {% endif %}
+      <p class="card-text">
+        <img class="img-fluid helper-photo d-block" src="{% if helper.photo %}{{ helper.photo.url }}{% endif %}" alt="{{ group.helper.name }}">
+        Group helper: {{ group.helper.name }}{% if group.helper.nickname %} ({{ group.helper.nickname }}){% endif %} <small class="text-muted ml-3">{{ group.helper.username }}</small>
+      </p>
       <p class="card-text">
         Group members:
         <ul>
@@ -16,6 +24,9 @@
           <li>{{ fresher.name }} <small class="text-muted ml-2">{{ fresher.username }}</small></li>
           {% endfor %}
         </ul>
+      </p>
+      <p class="card-text">
+        <a href="#">City Challenge</a>
       </p>
     </div>
   </div>
