--- a/jumpstart/templates/jumpstart/committee.html
+++ b/jumpstart/templates/jumpstart/committee.html
@@ -4,31 +4,30 @@
 {% for group in groups %}
 <div class="card mt-3">
   <div class="card-header">
-      Group {{ group.id }}
+    Group {{ group.id }}
+  </div>
+  <div class="card-body">
+    {% if group.name %}
+    <h5>{{ group.name }}</h5>
+    <small>Group {{ group.id }}</small>
+    {% else %}
+    <h5>Group {{ group.id }}</h5>
+    {% endif %}
+    <div class="card-text mb-3">
+      <img class="img-fluid helper-photo d-block" src="{% if helper.photo %}{{ helper.photo.url }}{% endif %}" alt="{{ group.helper.name }}">
+      Group helper: {{ group.helper.name }}{% if group.helper.nickname %} ({{ group.helper.nickname }}){% endif %} <small class="text-muted ml-2">{{ group.helper.username }}</small>
     </div>
-    <div class="card-body">
-      {% if group.name %}
-      <h5>{{ group.name }}</h5>
-      <small>Group {{ group.id }}</small>
-      {% else %}
-      <h5>Group {{ group.id }}</h5>
-      {% endif %}
-      <p class="card-text">
-        <img class="img-fluid helper-photo d-block" src="{% if helper.photo %}{{ helper.photo.url }}{% endif %}" alt="{{ group.helper.name }}">
-        Group helper: {{ group.helper.name }}{% if group.helper.nickname %} ({{ group.helper.nickname }}){% endif %} <small class="text-muted ml-3">{{ group.helper.username }}</small>
-      </p>
-      <p class="card-text">
-        Group members:
-        <ul>
-          {% for fresher in group.fresher_set.all %}
-          <li>{{ fresher.name }} <small class="text-muted ml-2">{{ fresher.username }}</small></li>
-          {% endfor %}
-        </ul>
-      </p>
-      <p class="card-text">
-        <a href="#">City Challenge</a>
-      </p>
+    <div class="card-text">
+      Group members:
+      <ul>
+        {% for fresher in group.fresher_set.all %}
+        <li>{{ fresher.name }} <small class="text-muted ml-2">{{ fresher.username }}</small></li>
+        {% endfor %}
+      </ul>
     </div>
+    <p class="card-text">
+      <a href="#">City Challenge</a>
+    </p>
   </div>
 </div>
 {% endfor %}
