--- a/jumpstart/templates/jumpstart/helper.html
+++ b/jumpstart/templates/jumpstart/helper.html
@@ -9,7 +9,7 @@
 <div class="alert alert-warning">{{ message }}</div>
 {% endif %}
 {% endfor %}
-<p class="card-text">Hi {% if helper.nickname %}{{ helper.nickname }}{% else %}{{ helper.name }}{% endif %}, welcome to <a href="{% url 'website:jumpstart-redirect' %}">Jumpstart</a>!</p>
+<p>Hi {% if helper.nickname %}{{ helper.nickname }}{% else %}{{ helper.name }}{% endif %}, welcome to <a href="{% url 'website:jumpstart-redirect' %}">Jumpstart</a>!</p>
 <div class="card">
   <div class="card-header">
     Your Group
@@ -24,7 +24,7 @@
     <p class="card-text">
       You are the helper of <b>{% if helper.group.name %}{{ helper.group.name }}{% else %}Group {{ helper.group.id }}{% endif %}</b>.
     </p>
-    <p class="card-text">
+    <div class="card-text">
       Member{{ helper.group.fresher_set.all|length|pluralize }} in {% if helper.group.name %}{{ helper.group.name }}{% else %}Group {{ helper.group.id }}{% endif %}:
       <ul>
         {% for group_fresher in helper.group.fresher_set.all %}
@@ -33,7 +33,7 @@
         {% endif %}
         {% endfor %}
       </ul>
-    </p>
+    </div>
   </div>
 </div>
 <div class="card mt-3">
@@ -41,13 +41,13 @@
     Your Profile
   </div>
   <div class="card-body">
-    <p class="card-text">
+    <div class="card-text">
       <img class="img-fluid helper-photo" src="{% if helper.photo %}{{ helper.photo.url }}{% endif %}" alt="{{ helper.name }}">
       <ul>
         <li>Name: {{ helper.name }}</li>
         <li>Nickname: {% if helper.nickname %}{{ helper.nickname }}{% else %}<span class="text-muted">Not set</span>{% endif %}</li>
       </ul>
-    </p>
+    </div>
     <p class="card-text">
       <a href="{% url 'jumpstart:profile-edit' %}">Edit</a>
     </p>
@@ -58,18 +58,17 @@
 </div>
 <div class="card mt-3">
   <div class="card-header">
-      City Challenge
-    </div>
-    <div class="card-body">
-      <p class="card-text">
-        Please help fill in this section with the group during the event.
-        <ul>
-          <li>
-            Group name: {% if fresher.group.name %}{{ fresher.group.name }}{% else %}<span class="text-muted">Not set</span>{% endif %}
-          </li>
-        </ul>
-        <a href="#">Edit</a>
-      </p>
+    City Challenge
+  </div>
+  <div class="card-body">
+    <div class="card-text">
+      Please help fill in this section with the group during the event.
+      <ul>
+        <li>
+          Group name: {% if fresher.group.name %}{{ fresher.group.name }}{% else %}<span class="text-muted">Not set</span>{% endif %}
+        </li>
+      </ul>
+      <a href="#">Edit</a>
     </div>
   </div>
 </div>
