Events Dates Added
Added the exact dates for the upcoming socials on the page.

--- a/website/templates/website/events/events.html
+++ b/website/templates/website/events/events.html
@@ -17,21 +17,21 @@
         <div class="timeline-content">
           <h5>Freshers' Social</h5>
           <p>Welcome freshers! This is an evening dedicated to introducing you to the department and the society. Hosted in the department and at the Hobbit.</p>
-          <p>Sept. 2018</p>
+          <p>25th Sept. 2018</p>
         </div>
       </div>
       <div class="timeline-container timeline-container-right">
           <div class="timeline-content">
             <h5>Video Game Social</h5>
             <p>Everyone gets together in the labs to eat pizza and play some video games - casual and competitive. There will also be board games available if video games aren't your fancy.</p>
-            <p>Oct. 2018</p>
+            <p>2nd Oct. 2018</p>
           </div>
         </div>
       <div class="timeline-container timeline-container-left">
         <div class="timeline-content">
           <h5>Halloween House Crawl</h5>
           <p>Tour the committee's houses on an evening filled with spooks and laughs. Dress up (either as your favourite ECS lecturer or something scary 👻) and judge our student digs!</p>
-          <p>Oct. 2018</p>
+          <p>26th Oct. 2018</p>
         </div>
       </div>
       <div class="timeline-container timeline-container-right">
