Add group views for freshers and helpers

--- a/jumpstart/templates/jumpstart/city-challenge-edit.html
+++ b/jumpstart/templates/jumpstart/city-challenge-edit.html
@@ -24,6 +24,9 @@
       {% endfor %}
       <input type="Submit" class="btn btn-ecssweb" value="Update">
     </form>
+    <p>
+        <small class="text-muted">Your group name will be visible to all freshers, helpers and committee members. Your other submissions will be visible to your group members and committee members.</small>
+    </p>
   </div>
 </div>
 {% endblock %}
