Show helpers nickname on groups list

--- a/jumpstart/templates/jumpstart/groups.html
+++ b/jumpstart/templates/jumpstart/groups.html
@@ -19,7 +19,7 @@
       {% if user|is_helper %}
       <p>
         <img class="img-fluid helper-photo d-block" src="{% if group.helper.photo %}{{ group.helper.photo.url }}{% endif %}" alt="{{ group.helper.name }}">
-        Group helper: {{ group.helper.name }}
+        Group helper: {{ group.helper.name }}{% if group.helper.nickname %} ({{ group.helper.nickname }}){% endif %}
       </p>
       {% endif %}
       <p>{{ group.fresher_set.all|length }} member{{ group.fresher_set.all|length|pluralize }}.</p>
