Add link to jumpstart portal

--- a/website/templates/website/events/jumpstart-2018.html
+++ b/website/templates/website/events/jumpstart-2018.html
@@ -99,7 +99,9 @@
       <p>Of course, it wouldn't be much of a challenge without prizes; be sure to attend the Jumpstart reception on Friday 28th September, where we'll have some goodies from ECSS and IBM up for grabs.</p>
       <section id="cityChallengeGroups">
         <h3>City Challenge Groups</h3>
-        <p class="text-muted">Groups info will be released soon.</p>
+        <p>
+          <a href="{% url 'jumpstart:home' %}">Login to view groups</a>.
+        </p>
       </section>
     </div>
   </section>
