Add charity shop challenge

--- a/jumpstart/templates/jumpstart/city-challenge-edit.html
+++ b/jumpstart/templates/jumpstart/city-challenge-edit.html
@@ -23,10 +23,10 @@
       </div>
       {% endfor %}
       <input type="Submit" class="btn btn-ecssweb" value="Update">
+      <div class="mt-2">
+        <small class="text-muted">Your group name will be visible to ECSS committee, City Challenge helpers and all freshers participating in City Challenge. Your other submissions will be visible to your group members and ECSS committee members.</small>
+      </div>
     </form>
-    <p>
-        <small class="text-muted">Your group name will be visible to all freshers, helpers and committee members. Your other submissions will be visible to your group members and committee members.</small>
-    </p>
   </div>
 </div>
 {% endblock %}
