--- a/jumpstart/templates/jumpstart/fresher.html
+++ b/jumpstart/templates/jumpstart/fresher.html
@@ -30,10 +30,10 @@
     Your Group Helper
   </div>
   <div class="card-body">
-    <p class="card-text">
+    <div class="card-text">
       Your group helper is {{ fresher.group.helper.name }}{% if fresher.group.helper.nickname %} ({{ fresher.group.helper.nickname }}){% endif %}.
       <img class="img-fluid helper-photo d-block" src="{% if helper.photo %}{{ helper.photo.url }}{% endif %}" alt="{{ fresher.group.helper.name }}">
-    </p>
+    </div>
   </div>
 </div>
 <div class="card mt-3">
@@ -47,6 +47,15 @@
         <li>
           Group name: {% if fresher.group.name %}{{ fresher.group.name }}{% else %}<span class="text-muted">Not set</span>{% endif %}
         </li>
+        <li>
+            Charity Shop Challenge photo:
+            {% if fresher.group.charity_shop_challenge_photo %}
+            <img class="img-fluid d-block city-challenge-photo" src="{{ fresher.group.charity_shop_challenge_photo.url }}" alt="Charity Shop Challenge">
+            {% else %}
+            <span class="text-muted">Not submitted</span>
+            {% endif %}
+          </li>
+        </ul>
       </ul>
     </div>
   </div>
