--- a/jumpstart/templates/jumpstart/helper-profile-edit.html
+++ b/jumpstart/templates/jumpstart/helper-profile-edit.html
@@ -19,12 +19,12 @@
       </div>
       {% endfor %}
       <input type="Submit" class="btn btn-ecssweb" value="Update">
-      <p>
+      <div class="my-2">
         <small class="text-muted">When updating your photo, the old file will not be immediately removed from the server. It need to be removed manually by us.</small>
-      </p>
-      <p>
-        <small class="text-muted">Your profile is visible to ECSS committee, City Challenge helpers and your group members.</small>
-      </p>
+      </div>
+      <div class="mt-2">
+        <small class="text-muted">Your profile is visible to ECSS committee, City Challenge helpers and all freshers participating in City Challenge.</small>
+      </div>
     </form>
   </div>
 </div>
