Add jumpstart scoring form

--- a/jumpstart/templates/jumpstart/city-challenge.html
+++ b/jumpstart/templates/jumpstart/city-challenge.html
@@ -19,6 +19,54 @@
         <span class="text-muted">Not submitted</span>
         {% endif %}
       </li>
+      <li>
+        <form class="form-inline my-2" method="post" action="{% url 'jumpstart:city-challenge-score' group.id %}?challenge=mitre">
+          {% csrf_token %}
+          {% for field in score_mitre_challenge_form %}
+          <div class="form-group">
+            {{ field.label_tag }}{{ field }}
+            {% if field.errors %}
+            <small class="form-text text-danger">
+              {% for err in field.errors %}{{ err }}{% endfor %}
+            </small>
+            {% endif %}
+          </div>
+          {% endfor %}
+          <input type="submit" class="btn btn-ecssweb" value="Update">
+        </form>
+      </li>
+      <li>
+        <form class="form-inline my-2" method="post" action="{% url 'jumpstart:city-challenge-score' group.id %}?challenge=coding">
+          {% csrf_token %}
+          {% for field in score_coding_challenge_form %}
+          <div class="form-group">
+            {{ field.label_tag }}{{ field }}
+            {% if field.errors %}
+            <small class="form-text text-danger">
+              {% for err in field.errors %}{{ err }}{% endfor %}
+            </small>
+            {% endif %}
+          </div>
+          {% endfor %}
+          <input type="submit" class="btn btn-ecssweb" value="Update">
+        </form>
+      </li>
+      <li>
+        <form class="form-inline my-2" method="post" action="{% url 'jumpstart:city-challenge-score' group.id %}?challenge=stags">
+          {% csrf_token %}
+          {% for field in stags_quiz_score_form %}
+          <div class="form-group">
+            {{ field.label_tag }}{{ field }}
+            {% if field.errors %}
+            <small class="form-text text-danger">
+              {% for err in field.errors %}{{ err }}{% endfor %}
+            </small>
+            {% endif %}
+          </div>
+          {% endfor %}
+          <input type="submit" class="btn btn-ecssweb" value="Update">
+        </form>
+      </li>
     </ul>
   </div>
 </div>
