--- a/portal/templates/portal/base.html
+++ b/portal/templates/portal/base.html
@@ -74,7 +74,7 @@
             {% endif %}
             {% if user|is_helper or user|is_fresher %}
             <li>
-              <a href="{% url 'jumpstart:groups' %}">Groups</a>
+              <a href="{% url 'jumpstart:groups' %}">Jumpstart Groups</a>
             </li>
             {% endif %}
           </ul>
