Add submit scavengerhunt

--- a/portal/templates/portal/base.html
+++ b/portal/templates/portal/base.html
@@ -71,8 +71,14 @@
             <li>
               <a href="{% url 'jumpstart:city-challenge-edit' %}">Submit City Challenge</a>
             </li>
+            <li>
+              <a href="{% url 'jumpstart:scavenger-hunt-edit' %}">Submit Scavenger Hunt</a>
+            </li>
             {% endif %}
             {% if user|is_helper or user|is_fresher %}
+            <!-- <li>
+              <a href="">View Scavenger Hunt</a>
+            </li> -->
             <li>
               <a href="{% url 'jumpstart:groups' %}">Jumpstart Groups</a>
             </li>
