Show all helpers to freshers

--- a/jumpstart/templates/jumpstart/city-challenge-edit.html
+++ b/jumpstart/templates/jumpstart/city-challenge-edit.html
@@ -26,6 +26,9 @@
       <div class="mt-2">
         <small class="text-muted">Your group name will be visible to ECSS committee, City Challenge helpers and all freshers participating in City Challenge. Your other submissions will be visible to your group members and ECSS committee members.</small>
       </div>
+      <div class="mt-2">
+        <small class="text-muted">Your submissions might be used for other part of the Jumpstart event.</small>
+      </div>
     </form>
   </div>
 </div>
