--- a/jumpstart/templates/jumpstart/scavenger-hunt-edit.html
+++ b/jumpstart/templates/jumpstart/scavenger-hunt-edit.html
@@ -31,6 +31,9 @@
       <div class="mt-2">
         <small class="text-muted">Your submission of Scavenger Hunt will be visible for ECSS committee and your group.</small>
       </div>
+      <div class="mt-2">
+        <small class="text-muted">Your submissions might be used for other part of the Jumpstart event.</small>
+      </div>
     </form>
   </div>
 </div>
