Add scavenger hunt view for freshers and helper

--- a/jumpstart/static/jumpstart/jumpstart.css
+++ b/jumpstart/static/jumpstart/jumpstart.css
@@ -1,4 +1,7 @@
-.helper-photo, .city-challenge-photo {
+.helper-photo, .city-challenge-photo, .scavenger-hunt-photo {
   width: 15rem;
 }
 
+.scavenger-hunt-photo {
+  height: 15rem;
+}
