--- a/jumpstart/templates/jumpstart/helper.html
+++ b/jumpstart/templates/jumpstart/helper.html
@@ -56,7 +56,7 @@
     </div>
   </div>
 </div>
-<div class="card mt-3">
+<div class="card my-3">
   <div class="card-header">
     City Challenge
   </div>
@@ -77,6 +77,22 @@
         </li>
       </ul>
       <a href="{% url 'jumpstart:city-challenge-edit' %}">Edit</a>
+    </div>
+  </div>
+</div>
+<div class="card">
+  <div class="card-header">
+    Scavenger Hunt
+  </div>
+  <div class="card-body">
+    <div class="mb-3">
+      Submitted {{ group.scavengerhunt_set.all|length }} photo{{ group.scavengerhunt_set.all|length|pluralize }}.
+    </div>
+    <div class="my-3">
+      <a href="{% url 'jumpstart:scavenger-hunt-edit' %}">Submit Scavenger Hunt</a>
+    </div>
+    <div class="mt-3">
+        <a href="{% url 'jumpstart:scavenger-hunt' %}">View Scavenger Hunt</a>
     </div>
   </div>
 </div>
