Update events/jumpstart related

--- a/jumpstart/templates/jumpstart/base.html
+++ b/jumpstart/templates/jumpstart/base.html
@@ -14,6 +14,9 @@ Jumpstart - ECSS
 {% block portalcontent %}
 <div>
   <h1>Jumpstart</h1>
+  <p class="alert alert-info">
+    Jumpstart portal will be available until about 31st Oct 2018.
+  </p>
   {% block jumpstartcontent %}
   {% endblock %}
 </div>
