Add Django admin

--- a/website/templates/website/committee/committee-member.html
+++ b/website/templates/website/committee/committee-member.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Committee - ECS{% endblock title %}
+{% block title %}Committee - ECSS{% endblock title %}
 
 {% block pagestyle %}
 {{ block.super }}
