--- a/portal/templates/portal/base.html
+++ b/portal/templates/portal/base.html
@@ -44,10 +44,10 @@
         <li class="list-group-item">
           <a href="#">Voting</a>
         </li>
-        <li class="list-group-item">
-          <a href="#">Shop</a>
-        </li>
         -->
+        <li class="list-group-item">
+          <a href="{% url 'shop:shop' %}">Shop</a>
+        </li>
         <li class="list-group-item">
           <ul class="list-unstyled">
             <li>
