--- a/shop/templates/shop/shop.html
+++ b/shop/templates/shop/shop.html
@@ -1,7 +1,51 @@
 {% extends 'portal/base.html' %}
 
+{% load static %}
+
+{% block title %}Shop - ECSS{% endblock %}
+
+{% block pagestyle %}
+{{ block.super }}
+<link rel="stylesheet" href="{% static 'shop/styles/shop.css' %}">
+{% endblock %}
+
 {% block portalcontent %}
 <section>
   <h1>Shop</h1>
+  {% if sales %}
+  {% for sale in sales %}
+  <div class="card">
+    <h5 class="card-header">
+      {{ sale.name }}
+    </h5>
+    <div class="card-body">
+      {% if sale.item_set.all %}
+      <div class="d-inline-flex flex-wrap">
+        {% for item in sale.item_set.all %}
+        <div class="card shop-item-card">
+          <img class="card-img-top" src="{% if item.image %}{{ item.image.url }}{% endif %}" alt="{{ item.name }}">
+          <a href="{% url 'shop:item' sale=sale.codename item=item.codename %}">
+            <h5 class="card-header">
+              {{ item.name }}
+            </h5>
+          </a>
+          <div class="card-body">
+            <div>
+              {{ item.description }}
+            </div>
+            <div>£{{ item.price }}</div>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
+      {% else %}
+      <p class="card-text">Nothing is on sale in this sale.</p>
+      {% endif %}
+    </div>
+  </div>
+  {% endfor %}
+  {% else %}
+  <p>Nothing is currently on sale here.</p>
+  {% endif %}
 </section>
 {% endblock %}
